--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
                                     <div class="title">
                                         <h4>About me</h4>
                                         <h2>
-                                            <span>TEACHING</span> TO IMPROVE LEANERS<br>
-                                            <span>RESEARCHING</span> TO IMPROVE MYSELF FOR TEACHING
+                                            <span>TEACHING</span><br>TO IMPROVE LEANERS<br>
+                                            <span>RESEARCHING</span><br>TO IMPROVE MYSELF FOR TEACHING
                                         </h2>
                                         <p>
                                             <b>Teaching Mathematics, Computer Science and Programming:</b><br>
@@ -93,102 +93,19 @@
                             <div class="right-wrapper">
                                 <div class="content _yt_er_ol">
                                     <div class="_re_uy_iu">
+                                        <h5>Highlight</h5>
                                         <div class="_ol_ew_xs">
-                                            <span>คณิตศาสต ม.ปลาย ตามหลักสูตร</span>
-                                            <span>100%</span>
-                                        </div>
-                                        <div class="progress">
-                                            <div style="width: 100%;" class="progress-bar my-bars" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
-                                        </div>
-                                    </div>
-                                    <div class="_re_uy_iu">
-                                        <div class="_ol_ew_xs">
-                                            <span>คณิตศาสตร์ ม.ปลาย สอบแข่งขัน</span>
-                                            <span>80%</span>
-                                        </div>
-                                        <div class="progress">
-                                            <div style="width: 80%;" class="progress-bar my-bars" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
-                                        </div>
-                                    </div>
-                                    <div class="_re_uy_iu">
-                                        <div class="_ol_ew_xs">
-                                            <span>คณิตศาสตร์ ป.ตรี</span>
-                                            <span>100%</span>
-                                        </div>
-                                        <div class="progress">
-                                            <div style="width: 100%;" class="progress-bar my-bars" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
-                                        </div>
-                                    </div>
-                                    <div class="_re_uy_iu">
-                                        <div class="_ol_ew_xs">
-                                            <span>สถิตเพื่อการทำวิจัย</span>
-                                            <span>60%</span>
-                                        </div>
-                                        <div class="progress">
-                                            <div style="width: 60%;" class="progress-bar my-bars" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
-                                        </div>
-                                    </div>
-                                    <div class="_re_uy_iu">
-                                        <div class="_ol_ew_xs">
-                                            <span>โปรแกรมมิ่ง</span>
-                                            <span>90%</span>
-                                        </div>
-                                        <div class="progress">
-                                            <div style="width: 90%;" class="progress-bar my-bars" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+                                                <ul>
+                                                    <li> <B>Python</B> (Expert): <span>data science, machine learning and deep learning, mathematics and statistics</span> </li>
+                                                    <li> <B>Java</B> (upper-intermediate): <span>teaching of data structures and algorithm </span></li>
+
+                                                </ul>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                             <div class="inter">
                                 <h6>WHAT I DO</h6>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </section>
-            <!-- =================================********================================= -->
-            <section id="about">
-                <div class="container">
-                    <div class="row">
-                        <div class="wrapper">
-                            <div class="left-three-wrapper">
-                                <div class="content">
-                                    <div class="title">
-                                        <h4>What I have ever done</h4>
-                                        <h2>
-                                            <span>TEACHING</span> TO IMPROVE LEANERS<br>
-                                        </h2>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="center-three-wrapper">
-                                <div class="content _yt_er_ol">
-                                    <div class="_re_uy_iu">
-                                        <span>Programming Language</span>
-                                        <ul>
-                                            <li>คณิตศาสต ม.ปลาย ตามหลักสูตร</li>
-                                            <li>คณิตศาสตร์ ม.ปลาย สอบแข่งขัน</li>
-                                            <li>คณิตศาสตร์ ป.ตรี</li>
-                                            <li>คณิตศาสตร์ ป.ตรี</li>
-                                        </ul>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="right-three-wrapper">
-                                <div class="content _yt_er_ol">
-                                    <div class="_re_uy_iu">
-                                        <span>Softwares</span>
-                                        <ul>
-                                            <li>คณิตศาสต ม.ปลาย ตามหลักสูตร</li>
-                                            <li>คณิตศาสตร์ ม.ปลาย สอบแข่งขัน</li>
-                                            <li>คณิตศาสตร์ ป.ตรี</li>
-                                            <li>คณิตศาสตร์ ป.ตรี</li>
-                                        </ul>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="inter">
-                                <h6>WHAT I CAN DO</h6>
                             </div>
                         </div>
                     </div>
@@ -267,6 +184,60 @@
                             </div>
                             <div class="inter">
                                 <h6>RESUME</h6>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!-- =================================********================================= -->
+            <section id="about">
+                <div class="container">
+                    <div class="row">
+                        <div class="wrapper">
+                            <div class="left-three-wrapper">
+                                <div class="content">
+                                    <div class="title">
+                                        <h4>What I have ever done</h4>
+                                        <h2>
+                                            <span>TEACHING</span> TO IMPROVE LEANERS<br>
+                                        </h2>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="center-three-wrapper">
+                                <div class="content _yt_er_ol">
+                                    <div class="_re_uy_iu">
+                                        <span>Programming Language</span>
+                                        <ul>
+                                            <li> <B>Python</B> (Expert): <br><span>data science, machine learning and deep learning, mathematics and statistics</span> </li>
+                                            <li> <B>Java</B> (upper-intermediate): <br><span>teaching of data structures and algorithm </span></li>
+                                            <li> <B>C</B> (intermediate): <br><span>operating system, competitive programming </span></li>
+                                            <li> <B>C++</B> (pre-intermediate): <br><span>competitive programming </span></li>
+                                            <li> <B>MATLAB</B> (pre-intermediate): <br><span>zmathematics, machine learning, signal processing </span></li>
+                                            <li> <B>JavaScript</B> (pre-intermediate): <br><span>artificial intelligence, web application</span> </li>
+                                            <li> <B>SQL</B> (pre-intermediate): <br><span>data management, web application</span> </li>
+                                            <li> <B>R</B> (beginner): <br><span>statistical analysis, machine learning</span> </li>
+                                            <li> <B>Haskel</B> (beginner): <br><span>functional programming teaching</span> </li>
+                                            <li> <B>Programming Language Theory</B>: <br><span>Make me can learn any programming language faster</span></li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="right-three-wrapper">
+                                <div class="content _yt_er_ol">
+                                    <div class="_re_uy_iu">
+                                        <span>Softwares</span>
+                                        <ul>
+                                            <li>คณิตศาสต ม.ปลาย ตามหลักสูตร</li>
+                                            <li>คณิตศาสตร์ ม.ปลาย สอบแข่งขัน</li>
+                                            <li>คณิตศาสตร์ ป.ตรี</li>
+                                            <li>คณิตศาสตร์ ป.ตรี</li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="inter">
+                                <h6>WHAT I CAN DO</h6>
                             </div>
                         </div>
                     </div>
