--- a/index.html
+++ b/index.html
@@ -209,16 +209,16 @@
                                     <div class="_re_uy_iu">
                                         <span>Programming Language</span>
                                         <ul>
-                                            <li> <B>Python</B> (Expert): <br><span>data science, machine learning and deep learning, mathematics and statistics</span> </li>
-                                            <li> <B>Java</B> (upper-intermediate): <br><span>teaching of data structures and algorithm </span></li>
-                                            <li> <B>C</B> (intermediate): <br><span>operating system, competitive programming </span></li>
-                                            <li> <B>C++</B> (pre-intermediate): <br><span>competitive programming </span></li>
-                                            <li> <B>MATLAB</B> (pre-intermediate): <br><span>zmathematics, machine learning, signal processing </span></li>
-                                            <li> <B>JavaScript</B> (pre-intermediate): <br><span>artificial intelligence, web application</span> </li>
-                                            <li> <B>SQL</B> (pre-intermediate): <br><span>data management, web application</span> </li>
-                                            <li> <B>R</B> (beginner): <br><span>statistical analysis, machine learning</span> </li>
-                                            <li> <B>Haskel</B> (beginner): <br><span>functional programming teaching</span> </li>
-                                            <li> <B>Programming Language Theory</B>: <br><span>Make me can learn any programming language faster</span></li>
+                                            <li> <B>Python</B> (Expert): <br><p>data science, machine learning and deep learning, mathematics and statistics</p> </li>
+                                            <li> <B>Java</B> (upper-intermediate): <br><p>teaching of data structures and algorithm </p></li>
+                                            <li> <B>C</B> (intermediate): <br><p>operating system, competitive programming </p></li>
+                                            <li> <B>C++</B> (pre-intermediate): <br><p>competitive programming </p></li>
+                                            <li> <B>MATLAB</B> (pre-intermediate): <br><p>zmathematics, machine learning, signal processing </p></li>
+                                            <li> <B>JavaScript</B> (pre-intermediate): <br><p>artificial intelligence, web application</p> </li>
+                                            <li> <B>SQL</B> (pre-intermediate): <br><p>data management, web application</p> </li>
+                                            <li> <B>R</B> (beginner): <br><p>statistical analysis, machine learning</p> </li>
+                                            <li> <B>Haskel</B> (beginner): <br><p>functional programming teaching</p> </li>
+                                            <li> <B>Programming Language Theory</B>: <br><p>Make me can learn any programming language faster</p></li>
                                         </ul>
                                     </div>
                                 </div>
