--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 </span>
                 <ul>
                     <li><a onclick="hide_menu()" href="#home">Home</a></li>
-                    <li><a onclick="hide_menu()" href="#about">Specialization</a></li>
+                    <li><a onclick="hide_menu()" href="#about">ABOUT ME</a></li>
                     <li><a onclick="hide_menu()" href="#resume">Resume</a></li>
                     <li><a onclick="hide_menu()" href="#portfolio">Projects</a></li>
                     <li><a onclick="hide_menu()" href="#textimonial">Reviews</a></li>
@@ -61,11 +61,12 @@
                             </div>
                             <div class="name-box">
                                 <font color="#ffffff">My name is</font> <h1>  <span>Phaphontee Yamchote.</span></h1>
+                                <font color="#ffffff">ปพนธีร์ แย้มโชติ (เต้ย)</font>
                             </div>
                             <div class="line"></div>
                         </div>
                         <div class="copy-right">
-                            <h6>© Smith 2020</h6>
+                            <h6>Template by © Smith 2020</h6>
                         </div>
                     </div>
                 </div>
@@ -93,14 +94,18 @@
                             <div class="right-wrapper">
                                 <div class="content _yt_er_ol">
                                     <div class="_re_uy_iu">
-                                        <h5>Highlight</h5>
                                         <div class="_ol_ew_xs">
-                                                <ul>
-                                                    <li> <B>Python</B> (Expert): <span>data science, machine learning and deep learning, mathematics and statistics</span> </li>
-                                                    <li> <B>Java</B> (upper-intermediate): <span>teaching of data structures and algorithm </span></li>
-
-                                                </ul>
+                                            A dedicated mathematician and computer scientist with extensive experience in machine learning, deep learning, and data science. Specializing in graph neural networks, and I possess strong analytical and problem-solving skills with a proven ability to implement and optimize machine learning algorithms.
                                         </div>
+                                        <br>
+                                        <h5>Highlight</h5>
+                                        <ol>
+                                            <li> - Multidisciplinary expert with a strong background in mathematics, computer science, and data science.</li>
+                                            <li> - Extensive experience (4 years) in hands-on projects involving data science and machine learning in both manufacturing and financial domains.</li>
+                                            <li> - Proficient in designing and implementing machine learning and deep learning models with a theoretical focus.</li>
+                                            <li> - Skilled in utilizing PyTorch for deep learning research and development.</li>
+                                            <li> - Skilled in algorithm programming and optimization.</li>
+                                        </ol>
                                     </div>
                                 </div>
                             </div>
@@ -198,9 +203,22 @@
                                 <div class="content">
                                     <div class="title">
                                         <h4>What I have ever done</h4>
-                                        <h2>
-                                            <span>TEACHING</span> TO IMPROVE LEANERS<br>
-                                        </h2>
+                                        <h3>
+                                            <span>Data Analyst</span><br>
+                                            <p>in audit</p>
+                                        </h3>
+                                        <h3>
+                                            <span>Innovative Developper</span><br>
+                                            <p>in audit</p>
+                                        </h3>
+                                        <h3>
+                                            <span>Data Scientist</span><br>
+                                            <p>in manufacturing industry</p>
+                                        </h3>
+                                        <h3>
+                                            <span>Machine Learning Researcher</span><br>
+                                            <p>in manufacturing industry / for data science</p>
+                                        </h3>
                                     </div>
                                 </div>
                             </div>
@@ -228,11 +246,18 @@
                                     <div class="_re_uy_iu">
                                         <span>Softwares</span>
                                         <ul>
-                                            <li>คณิตศาสต ม.ปลาย ตามหลักสูตร</li>
-                                            <li>คณิตศาสตร์ ม.ปลาย สอบแข่งขัน</li>
-                                            <li>คณิตศาสตร์ ป.ตรี</li>
-                                            <li>คณิตศาสตร์ ป.ตรี</li>
-                                        </ul>
+                                            <li> <B>Machine Learning</B> <br><p>Scikit learn</p></li>
+                                            <li> <B>Deep Learning</B> <br><p>Pytorch, TensorFlow and Keras, Apache Mxnet, Pytorch Lightning</p></li>
+                                            <li> <B>Graph Neural Network</B> <br><p>Pytorch Geometric</p></li>
+                                            <li> <B>Natural Language Processing</B> <br><p>SpaCy, LangChain</p></li>     	
+                                            <li> <B>Container environment</B> <br><p>Docker</p></li>
+                                            <li> <B>Web Application Development</B> <br><p>Google Apps Script, Python Django</p></li>
+                                            <li> <B>Data Analytics</B> <br><p>Pandas, Apache Hadoop, Power BI, Excel ElasticSearch</p></li>
+                                            <li> <B>Database Management</B> <br><p>MySQL, MS Access</p></li>
+                                            <li> <B>Low-code/No-code framework</B> <br><p>Orange (machine learning), Scratch (programming for kids)</p></li>
+                                            <li> <B>Optimization</B> <br><p>Pyomo</p></li>
+                                            <li> <B>Development</B> <br><p>Vscode, Linux</p></li>	
+                                    </ul>
                                     </div>
                                 </div>
                             </div>
@@ -262,6 +287,9 @@
                                         </li>
                                         <li class="nav-item">
                                             <a class="nav-link" id="project-template" data-toggle="tab" href="#project" role="tab" aria-controls="project" aria-selected="true">Project</a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link" id="public-template" data-toggle="tab" href="#public" role="tab" aria-controls="public" aria-selected="true">Publication</a>
                                         </li>
                                     </ul>
 
@@ -318,6 +346,7 @@
                                                 </ol>
                                             </div>
                                         </div>
+                                        <!-- ------------***----------- -->
                                         <div class="tab-pane fade " id="project" role="tabpanel" aria-labelledby="project-template">
                                             <div class="content-list">
                                                <ol>
@@ -335,6 +364,25 @@
                                                 </ol>
                                             </div>
                                         </div>
+                                        <!-- ------------***----------- -->
+                                        <div class="tab-pane fade " id="public" role="tabpanel" aria-labelledby="public-template">
+                                            <div class="content-list">
+                                               <ol>
+                                                    <li>
+                                                        <div class="_ok-vd_zs">
+                                                            <figure>
+                                                                <img src="assets/images/abt/6.jpg">
+                                                                <div class="inner-content">
+                                                                    <a href="#">Live Preview</a>
+                                                                </div>
+                                                            </figure>
+                                                        </div>
+                                                    </li>
+                                                    
+                                                </ol>
+                                            </div>
+                                        </div>
+                                        <!-- ------------***----------- -->
                                     </div>
                                 </div>
                             </div>
@@ -357,35 +405,14 @@
                     </div>
                     <div class="row">
                         <div class="col-12">
-                            <form action="">
-                                <div class="row">
-                                    <div class="col-md-6 col-sm-12 col-xs-12">
-                                        <div class="form-group">
-                                            <input class="form-control" name="121" type="text" required="name" placeholder="Enter Your Name">
-                                        </div>
-                                    </div>
-                                    <div class="col-md-6 col-sm-12 col-xs-12">
-                                        <div class="form-group">
-                                            <input class="form-control" name="122" type="text" required="email" placeholder="Enter Your Email">
-                                        </div>
-                                    </div>
-                                    <div class="col-12">
-                                        <div class="form-group">
-                                            <input class="form-control" name="123" type="text" required="subject" placeholder="Subject (optinal)">
-                                        </div>
-                                    </div>
-                                    <div class="col-12">
-                                        <div class="form-group">
-                                            <textarea class="" cals="40" rows="10" name="124" type="text" placeholder="Message"></textarea>
-                                        </div>
-                                    </div>
-                                    <div class="col-12">
-                                        <div class="send">
-                                            <a href="#">Send</a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </form>
+
+                            <div class="row">
+                                <p style="color: rgb(255, 255, 255);">The best way to contact me is Email: </p> <span style="color: rgb(255, 0, 0);"> yamchote_p@outlook.com</span>
+                            </div>
+                            <div class="row">
+                                <p style="color: rgb(255, 255, 255);">Telephone: </p> <span style="color: rgb(255, 0, 0);"> +66870492475</span> (unavailable until 31 August)
+                            </div>
+
                             <div class="inter">
                                 <h6>Contact</h6>
                             </div>
