--- a/index.html
+++ b/index.html
@@ -333,7 +333,10 @@
                                             <!-- <div class="content-list"> -->
                                                 <ol>
                                                     <li style="color: white;">
-                                                        <mark>(1)</mark> <a href="https://www.researchgate.net/publication/349103793_Generalized_Lojasiewicz_Inequality_in_Expansions_of_the_Real_Field">Generalized Lojasiewicz Inequality in expansions of the real field</a> (with Athipat Thamrongthanyalak), Proceedings of Annual Pure and Applied Mathematics Conference (2020), 244-251.
+                                                        <span style="color: red; font-weight: bold;">(1)</span> <a href=""></a> (IN PROGRESS)
+                                                    </li>
+                                                    <li style="color: white;">
+                                                        <span style="color: red; font-weight: bold;">(2)</span> <a href="https://www.researchgate.net/publication/349103793_Generalized_Lojasiewicz_Inequality_in_Expansions_of_the_Real_Field">Generalized Lojasiewicz Inequality in expansions of the real field</a> (with Athipat Thamrongthanyalak), Proceedings of Annual Pure and Applied Mathematics Conference (2020), 244-251.
                                                     </li>
                                                 </ol>
                                             <!-- </div> -->
@@ -381,7 +384,7 @@
                                                             <figure>
                                                                 <img src="assets/images/mathJPV24/mathJPV24_6.jpg">
                                                                 <div class="inner-content">
-                                                                    <a href="#">Live Preview</a>
+                                                                    <a href="#">คณิตศาสตร์นานาชาติ สพฐ<br>ระดับมัธยมต้น</a>
                                                                 </div>
                                                             </figure>
                                                         </div>
@@ -434,7 +437,7 @@
                         <div class="col-12">
 
                             <div class="row">
-                                <p style="color: rgb(255, 255, 255);">The best way to contact me is Email: </p> <span style="color: rgb(255, 0, 0);"> yamchote_p@outlook.com</span>
+                                <p style="color: rgb(255, 255, 255);">The best way to contact me is Email: </p> <a href="mailto:yamchote_p@outlook.com"> yamchote_p@outlook.com</a>
                             </div>
                             <div class="row">
                                 <p style="color: rgb(255, 255, 255);">Telephone: </p> <span style="color: rgb(255, 0, 0);"> +66870492475</span> (unavailable until 31 August)
