--- a/index.html
+++ b/index.html
@@ -37,11 +37,7 @@
                             </div>
                             <div class="social-media">
                                 <ul>
-                                    <li><a><i class="flaticon-facebook"></i></a></li>
-                                    <li><a><i class="flaticon-twitter"></i></a></li>
-                                    <li><a><i class="flaticon-behance-big-logo"></i></a></li>
-                                    <li><a><i class="flaticon-linkedin"></i></a></li>
-                                    <li><a><i class="flaticon-dribbble"></i></a></li>
+                                    <li><a href="https://linkedin.com/in/phaphontee-yamchote"><i class="flaticon-linkedin"></i></a></li>
                                 </ul>
                             </div>
                             <div onclick="show_menu()" class="my-toogle" style="position: fixed;">
@@ -348,9 +344,9 @@
                                                     <li>
                                                         <div class="_ok-vd_zs">
                                                             <figure>
-                                                                <img src="assets/images/abt/1.jpg">
+                                                                <img src="assets/images/APAM2022/APAM2022_1.jpg">
                                                                 <div class="inner-content">
-                                                                    <a href="#">Live Preview</a>
+                                                                    <a href="#">APAM2022</a>
                                                                 </div>
                                                             </figure>
                                                         </div>
