--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <li><a onclick="hide_menu()" href="#about">ABOUT ME</a></li>
                     <li><a onclick="hide_menu()" href="#resume">Resume</a></li>
                     <li><a onclick="hide_menu()" href="#portfolio">Projects</a></li>
-                    <li><a onclick="hide_menu()" href="#textimonial">Reviews</a></li>
+                    <!-- <li><a onclick="hide_menu()" href="#textimonial">Reviews</a></li> -->
                     <li><a onclick="hide_menu()" href="#contact">Contact</a></li>
                 </ul>
             </div>
@@ -77,7 +77,6 @@
                             <div class="left-wrapper">
                                 <div class="content">
                                     <div class="title">
-                                        <h4>About me</h4>
                                         <h2>
                                             <span>TEACHING</span><br>TO IMPROVE LEANERS<br>
                                             <span>RESEARCHING</span><br>TO IMPROVE MYSELF FOR TEACHING
@@ -108,7 +107,7 @@
                                 </div>
                             </div>
                             <div class="inter">
-                                <h6>WHAT I DO</h6>
+                                <h6>ABOUT ME</h6>
                             </div>
                         </div>
                     </div>
