--- a/index.html
+++ b/index.html
@@ -343,6 +343,16 @@
                                                     <li>
                                                         <div class="_ok-vd_zs">
                                                             <figure>
+                                                                <img src="assets/images/jaist2024/jaist2024_1.jpg">
+                                                                <div class="inner-content">
+                                                                    <a href="#">JAIST2024</a>
+                                                                </div>
+                                                            </figure>
+                                                        </div>
+                                                    </li>
+                                                    <li>
+                                                        <div class="_ok-vd_zs">
+                                                            <figure>
                                                                 <img src="assets/images/APAM2022/APAM2022_1.jpg">
                                                                 <div class="inner-content">
                                                                     <a href="#">APAM2022</a>
