add apam and jaist

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <title>portfolio</title>
+        <title>homepage</title>
         <link rel="stylesheet" href="assets/css/bootstrap.min.css">
         <link rel="stylesheet" href="assets/css/plugins/owl.carousel.min.css">
         <link rel="stylesheet" href="assets/font/flaticon.css">
@@ -345,7 +345,7 @@
                                                             <figure>
                                                                 <img src="assets/images/jaist2024/jaist2024_1.jpg">
                                                                 <div class="inner-content">
-                                                                    <a href="#">JAIST2024</a>
+                                                                    <a href="JAIST2024.html" target="_blank">JAIST2024</a>
                                                                 </div>
                                                             </figure>
                                                         </div>
@@ -355,7 +355,7 @@
                                                             <figure>
                                                                 <img src="assets/images/APAM2022/APAM2022_1.jpg">
                                                                 <div class="inner-content">
-                                                                    <a href="#">APAM2022</a>
+                                                                    <a href="APAM2022.html" target="_blank">APAM2022</a>
                                                                 </div>
                                                             </figure>
                                                         </div>
